--- a/index.html
+++ b/index.html
@@ -434,13 +434,17 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div id="header">
 <h1>SeaLion Mission Concept of Operations (ConOps)</h1>
 <div class="details">
-<span id="revnumber">version v0.1.0</span>
+<span id="revnumber">version v0.4.0</span>
 </div>
 <div id="toc" class="toc2">
 <div id="toctitle">Table of Contents</div>
 <ul class="sectlevel1">
 <li><a href="#_stakeholder_needs">Stakeholder Needs</a></li>
-<li><a href="#_user_stories">User Stories</a></li>
+<li><a href="#_user_stories">User Stories</a>
+<ul class="sectlevel2">
+<li><a href="#_user_story_1_ping_satellite">User Story 1: Ping Satellite</a></li>
+</ul>
+</li>
 </ul>
 </div>
 </div>
@@ -464,7 +468,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div class="sidebarblock">
 <div class="content">
-<div class="title">Stakeholder Need 1.1: Primary Mission Objective 1/2</div>
+<div class="title">Stakeholder Need 1.1: Primary Mission Objective A1</div>
 <div class="paragraph">
 <p>The SeaLion mission shall establish UHF communication link with Virginia ground station</p>
 </div>
@@ -472,7 +476,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div class="sidebarblock">
 <div class="content">
-<div class="title">Stakeholder Need 1.2: Primary Mission Objective 2/2</div>
+<div class="title">Stakeholder Need 1.2: Primary Mission Objective A2</div>
 <div class="paragraph">
 <p>The SeaLion mission shall establish S-Band communication link with MC3 ground station</p>
 </div>
@@ -480,7 +484,23 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div class="sidebarblock">
 <div class="content">
-<div class="title">Stakeholder Need 2.1: Secondary Mission Objective 1/3</div>
+<div class="title">Stakeholder Need 1.3: Primary Mission Objective A3</div>
+<div class="paragraph">
+<p>The SeaLion mission shall successfully transmit “mission data” defined above to ground stations on the Earth.</p>
+</div>
+</div>
+</div>
+<div class="sidebarblock">
+<div class="content">
+<div class="title">Stakeholder Need 1.4: Primary Mission Objective A4</div>
+<div class="paragraph">
+<p>The SeaLion mission shall adhere to CubeSat standards as per CDS Rev. 13</p>
+</div>
+</div>
+</div>
+<div class="sidebarblock">
+<div class="content">
+<div class="title">Stakeholder Need 2.1: Secondary Mission Objective B1</div>
 <div class="paragraph">
 <p>The SeaLion mission shall provide a means to validate an impedance probe in-orbit</p>
 </div>
@@ -488,7 +508,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div class="sidebarblock">
 <div class="content">
-<div class="title">Stakeholder Need 2.2: Secondary Mission Objective 2/3</div>
+<div class="title">Stakeholder Need 2.2: Secondary Mission Objective B2</div>
 <div class="paragraph">
 <p>The SeaLion mission shall provide a means to validate a V-Infrared Sensor (VIR-S) in-orbit</p>
 </div>
@@ -496,7 +516,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div class="sidebarblock">
 <div class="content">
-<div class="title">Stakeholder Need 2.3: Secondary Mission Objective 3/3</div>
+<div class="title">Stakeholder Need 2.3: Secondary Mission Objective B3</div>
 <div class="paragraph">
 <p>The SeaLion mission shall provide a means to validate a deployable composite structure (DeCS) in-orbit</p>
 </div>
@@ -504,7 +524,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div class="sidebarblock">
 <div class="content">
-<div class="title">Stakeholder Need 3.1: Tertiary Mission Objective 1/3</div>
+<div class="title">Stakeholder Need 3.1: Tertiary Mission Objective C1</div>
 <div class="paragraph">
 <p>The SeaLion mission shall qualify a newly developed antenna</p>
 </div>
@@ -512,7 +532,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div class="sidebarblock">
 <div class="content">
-<div class="title">Stakeholder Need 3.2: Tertiary Mission Objective 2/3</div>
+<div class="title">Stakeholder Need 3.2: Tertiary Mission Objective C2</div>
 <div class="paragraph">
 <p>The SeaLion mission shall qualify a CubeSat bus architecture for very-low Earth orbit (VLEO)</p>
 </div>
@@ -520,7 +540,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div class="sidebarblock">
 <div class="content">
-<div class="title">Stakeholder Need 3.3: Tertiary Mission Objective 3/3</div>
+<div class="title">Stakeholder Need 3.3: Tertiary Mission Objective C3</div>
 <div class="paragraph">
 <p>The SeaLion shall verify DeCS in-orbit behavior performance via accelerometer &amp; temperature sensor data</p>
 </div>
@@ -534,13 +554,26 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="paragraph">
 <p>The SeaLion Mission Concept of Operations (ConOps)'s stakeholder needs are then used to identify a series of user stories which then lead to design decisions captured in data structure and activity definitions.</p>
 </div>
+<div class="sect2">
+<h3 id="_user_story_1_ping_satellite">User Story 1: Ping Satellite</h3>
+<div class="sidebarblock">
+<div class="content">
+<div class="paragraph">
+<p>As a <strong>Ground Station Operator</strong> I want to <strong>Ping satellite</strong> so that I can <strong>Establish communication link with satellite</strong>.</p>
+</div>
+</div>
+</div>
+<div class="paragraph">
+<p><strong>Example:</strong> Ping the satellite in order to establish UHF communication link with Virginia ground station</p>
+</div>
+</div>
 </div>
 </div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Version v0.1.0<br>
-Last updated 2021-08-05 03:45:03 UTC
+Version v0.4.0<br>
+Last updated 2021-08-28 01:44:01 UTC
 </div>
 </div>
 </body>
