--- a/index.html
+++ b/index.html
@@ -448,6 +448,9 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#_user_stories">User Stories</a>
 <ul class="sectlevel2">
 <li><a href="#_user_story_1_ping_satellite">User Story 1: Ping Satellite</a></li>
+<li><a href="#_user_story_2_view_satellite_health_data_packet">User Story 2: View Satellite Health Data Packet</a></li>
+<li><a href="#_user_story_2_1_query_satellite_health_data_packet">User Story 2.1: Query Satellite Health Data Packet</a></li>
+<li><a href="#_user_story_2_2_listen_for_satellite_beacon">User Story 2.2: Listen for Satellite Beacon</a></li>
 </ul>
 </li>
 </ul>
@@ -584,13 +587,85 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 </div>
 </div>
+<div class="sect2">
+<h3 id="_user_story_2_view_satellite_health_data_packet">User Story 2: View Satellite Health Data Packet</h3>
+<div class="sidebarblock">
+<div class="content">
+<div class="paragraph">
+<p>As a <strong>Ground Station Operator</strong> I want to <strong>View satellite health data packet</strong> so that I can <strong>Validate that satellite is operating nominally</strong>.</p>
+</div>
+</div>
+</div>
+<div class="sect3">
+<h4 id="_example_2">Example:</h4>
+<div class="paragraph">
+<p>View satellite satellite health data packet in order to validate the mission data of the IP and DeCS payloads</p>
+</div>
+</div>
+<div class="sect3">
+<h4 id="_derived_from_2"><strong>Derived From:</strong></h4>
+<div class="ulist">
+<ul>
+<li>
+<p>Primary Mission Objective A2</p>
+</li>
+<li>
+<p>Primary Mission Objective A3</p>
+</li>
+<li>
+<p>Tertiary Mission Objective C3</p>
+</li>
+</ul>
+</div>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_user_story_2_1_query_satellite_health_data_packet">User Story 2.1: Query Satellite Health Data Packet</h3>
+<div class="sidebarblock">
+<div class="content">
+<div class="paragraph">
+<p>As a <strong>Ground Station Operator</strong> I want to <strong>Send satellite health data packet downlink command</strong> so that I can <strong>Request satellite health data packet</strong>.</p>
+</div>
+</div>
+</div>
+<div class="sect3">
+<h4 id="_example_3">Example:</h4>
+<div class="paragraph">
+<p>Send satellite health data packet downlink command in order to aquire satellite health data packet downlink</p>
+</div>
+</div>
+<div class="sect3">
+<h4 id="_derived_from_3"><strong>Derived From:</strong></h4>
+
+</div>
+</div>
+<div class="sect2">
+<h3 id="_user_story_2_2_listen_for_satellite_beacon">User Story 2.2: Listen for Satellite Beacon</h3>
+<div class="sidebarblock">
+<div class="content">
+<div class="paragraph">
+<p>As a <strong>Ground Station Operator</strong> I want to <strong>Open ground station beacon monitor</strong> so that I can <strong>View satellite health data packet</strong>.</p>
+</div>
+</div>
+</div>
+<div class="sect3">
+<h4 id="_example_4">Example:</h4>
+<div class="paragraph">
+<p>Open ground station beacon monitor to listen for satellite health data packet downlink</p>
+</div>
+</div>
+<div class="sect3">
+<h4 id="_derived_from_4"><strong>Derived From:</strong></h4>
+
+</div>
+</div>
 </div>
 </div>
 </div>
 <div id="footer">
 <div id="footer-text">
 Version v0.4.0<br>
-Last updated 2021-09-01 07:41:13 UTC
+Last updated 2021-09-02 21:50:15 UTC
 </div>
 </div>
 </body>
