--- a/index.html
+++ b/index.html
@@ -444,15 +444,29 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div id="toc" class="toc2">
 <div id="toctitle">Table of Contents</div>
 <ul class="sectlevel1">
-<li><a href="#_stakeholder_needs">Stakeholder Needs</a></li>
-<li><a href="#_user_stories">User Stories</a>
+<li><a href="#_stakeholder_needs">Stakeholder Needs</a>
 <ul class="sectlevel2">
-<li><a href="#_user_story_1_ping_satellite">User Story 1: Ping Satellite</a></li>
-<li><a href="#_user_story_2_view_satellite_health_data_packet">User Story 2: View Satellite Health Data Packet</a></li>
-<li><a href="#_user_story_2_1_query_satellite_health_data_packet">User Story 2.1: Query Satellite Health Data Packet</a></li>
-<li><a href="#_user_story_2_2_listen_for_satellite_beacon">User Story 2.2: Listen for Satellite Beacon</a></li>
+<li><a href="#_1_1_primary_mission_objective_a1">1.1: Primary Mission Objective A1</a></li>
+<li><a href="#_1_2_primary_mission_objective_a2">1.2: Primary Mission Objective A2</a></li>
+<li><a href="#_1_3_primary_mission_objective_a3">1.3: Primary Mission Objective A3</a></li>
+<li><a href="#_1_4_primary_mission_objective_a4">1.4: Primary Mission Objective A4</a></li>
+<li><a href="#_2_1_secondary_mission_objective_b1">2.1: Secondary Mission Objective B1</a></li>
+<li><a href="#_2_2_secondary_mission_objective_b2">2.2: Secondary Mission Objective B2</a></li>
+<li><a href="#_2_3_secondary_mission_objective_b3">2.3: Secondary Mission Objective B3</a></li>
+<li><a href="#_3_1_tertiary_mission_objective_c1">3.1: Tertiary Mission Objective C1</a></li>
+<li><a href="#_3_2_tertiary_mission_objective_c2">3.2: Tertiary Mission Objective C2</a></li>
+<li><a href="#_3_3_tertiary_mission_objective_c3">3.3: Tertiary Mission Objective C3</a></li>
 </ul>
 </li>
+<li><a href="#_user_stories">User Stories</a>
+<ul class="sectlevel2">
+<li><a href="#_1_ping_satellite">1: Ping Satellite</a></li>
+<li><a href="#_2_view_satellite_health_data_packet">2: View Satellite Health Data Packet</a></li>
+<li><a href="#_2_1_query_satellite_health_data_packet">2.1: Query Satellite Health Data Packet</a></li>
+<li><a href="#_2_2_listen_for_satellite_beacon">2.2: Listen for Satellite Beacon</a></li>
+</ul>
+</li>
+<li><a href="#_data_structures">Data Structures</a></li>
 </ul>
 </div>
 </div>
@@ -473,83 +487,113 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="paragraph">
 <p>The SeaLion Mission Concept of Operations (ConOps) is guided by a series of stakeholder needs, listed below.</p>
 </div>
+<div class="sect2">
+<h3 id="_1_1_primary_mission_objective_a1">1.1: Primary Mission Objective A1</h3>
 <div class="sidebarblock">
 <div class="content">
-<div class="title">Stakeholder Need 1.1: Primary Mission Objective A1</div>
 <div class="paragraph">
 <p>The SeaLion mission shall establish UHF communication link with Virginia ground station</p>
 </div>
 </div>
 </div>
+</div>
+<div class="sect2">
+<h3 id="_1_2_primary_mission_objective_a2">1.2: Primary Mission Objective A2</h3>
 <div class="sidebarblock">
 <div class="content">
-<div class="title">Stakeholder Need 1.2: Primary Mission Objective A2</div>
 <div class="paragraph">
 <p>The SeaLion mission shall establish S-Band communication link with MC3 ground station</p>
 </div>
 </div>
 </div>
+</div>
+<div class="sect2">
+<h3 id="_1_3_primary_mission_objective_a3">1.3: Primary Mission Objective A3</h3>
 <div class="sidebarblock">
 <div class="content">
-<div class="title">Stakeholder Need 1.3: Primary Mission Objective A3</div>
 <div class="paragraph">
 <p>The SeaLion mission shall successfully transmit “mission data” defined above to ground stations on the Earth.</p>
 </div>
 </div>
 </div>
+</div>
+<div class="sect2">
+<h3 id="_1_4_primary_mission_objective_a4">1.4: Primary Mission Objective A4</h3>
 <div class="sidebarblock">
 <div class="content">
-<div class="title">Stakeholder Need 1.4: Primary Mission Objective A4</div>
 <div class="paragraph">
 <p>The SeaLion mission shall adhere to CubeSat standards as per CDS Rev. 13</p>
 </div>
 </div>
 </div>
+<div class="sect3">
+<h4 id="_reference"><strong>Reference:</strong></h4>
+<div class="ulist">
+<ul>
+<li>
+<p><a href="https://www.cubesat.org/s/cds_rev13_final2.pdf">CubeSat Design Specification Rev. 13</a></p>
+</li>
+</ul>
+</div>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_2_1_secondary_mission_objective_b1">2.1: Secondary Mission Objective B1</h3>
 <div class="sidebarblock">
 <div class="content">
-<div class="title">Stakeholder Need 2.1: Secondary Mission Objective B1</div>
 <div class="paragraph">
 <p>The SeaLion mission shall provide a means to validate an impedance probe in-orbit</p>
 </div>
 </div>
 </div>
+</div>
+<div class="sect2">
+<h3 id="_2_2_secondary_mission_objective_b2">2.2: Secondary Mission Objective B2</h3>
 <div class="sidebarblock">
 <div class="content">
-<div class="title">Stakeholder Need 2.2: Secondary Mission Objective B2</div>
 <div class="paragraph">
 <p>The SeaLion mission shall provide a means to validate a V-Infrared Sensor (VIR-S) in-orbit</p>
 </div>
 </div>
 </div>
+</div>
+<div class="sect2">
+<h3 id="_2_3_secondary_mission_objective_b3">2.3: Secondary Mission Objective B3</h3>
 <div class="sidebarblock">
 <div class="content">
-<div class="title">Stakeholder Need 2.3: Secondary Mission Objective B3</div>
 <div class="paragraph">
 <p>The SeaLion mission shall provide a means to validate a deployable composite structure (DeCS) in-orbit</p>
 </div>
 </div>
 </div>
+</div>
+<div class="sect2">
+<h3 id="_3_1_tertiary_mission_objective_c1">3.1: Tertiary Mission Objective C1</h3>
 <div class="sidebarblock">
 <div class="content">
-<div class="title">Stakeholder Need 3.1: Tertiary Mission Objective C1</div>
 <div class="paragraph">
 <p>The SeaLion mission shall qualify a newly developed antenna</p>
 </div>
 </div>
 </div>
+</div>
+<div class="sect2">
+<h3 id="_3_2_tertiary_mission_objective_c2">3.2: Tertiary Mission Objective C2</h3>
 <div class="sidebarblock">
 <div class="content">
-<div class="title">Stakeholder Need 3.2: Tertiary Mission Objective C2</div>
 <div class="paragraph">
 <p>The SeaLion mission shall qualify a CubeSat bus architecture for very-low Earth orbit (VLEO)</p>
 </div>
 </div>
 </div>
+</div>
+<div class="sect2">
+<h3 id="_3_3_tertiary_mission_objective_c3">3.3: Tertiary Mission Objective C3</h3>
 <div class="sidebarblock">
 <div class="content">
-<div class="title">Stakeholder Need 3.3: Tertiary Mission Objective C3</div>
 <div class="paragraph">
 <p>The SeaLion shall verify DeCS in-orbit behavior performance via accelerometer &amp; temperature sensor data</p>
+</div>
 </div>
 </div>
 </div>
@@ -562,7 +606,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p>The SeaLion Mission Concept of Operations (ConOps)'s stakeholder needs are then used to identify a series of user stories which then lead to design decisions captured in data structure and activity definitions.</p>
 </div>
 <div class="sect2">
-<h3 id="_user_story_1_ping_satellite">User Story 1: Ping Satellite</h3>
+<h3 id="_1_ping_satellite">1: Ping Satellite</h3>
 <div class="sidebarblock">
 <div class="content">
 <div class="paragraph">
@@ -581,14 +625,14 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="ulist">
 <ul>
 <li>
-<p>Primary Mission Objective A1</p>
+<p><a href="#_1_1_primary_mission_objective_a1">Primary Mission Objective A1</a></p>
 </li>
 </ul>
 </div>
 </div>
 </div>
 <div class="sect2">
-<h3 id="_user_story_2_view_satellite_health_data_packet">User Story 2: View Satellite Health Data Packet</h3>
+<h3 id="_2_view_satellite_health_data_packet">2: View Satellite Health Data Packet</h3>
 <div class="sidebarblock">
 <div class="content">
 <div class="paragraph">
@@ -607,20 +651,20 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="ulist">
 <ul>
 <li>
-<p>Primary Mission Objective A2</p>
+<p><a href="#_1_2_primary_mission_objective_a2">Primary Mission Objective A2</a></p>
 </li>
 <li>
-<p>Primary Mission Objective A3</p>
+<p><a href="#_1_3_primary_mission_objective_a3">Primary Mission Objective A3</a></p>
 </li>
 <li>
-<p>Tertiary Mission Objective C3</p>
+<p><a href="#_3_3_tertiary_mission_objective_c3">Tertiary Mission Objective C3</a></p>
 </li>
 </ul>
 </div>
 </div>
 </div>
 <div class="sect2">
-<h3 id="_user_story_2_1_query_satellite_health_data_packet">User Story 2.1: Query Satellite Health Data Packet</h3>
+<h3 id="_2_1_query_satellite_health_data_packet">2.1: Query Satellite Health Data Packet</h3>
 <div class="sidebarblock">
 <div class="content">
 <div class="paragraph">
@@ -636,11 +680,17 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div class="sect3">
 <h4 id="_derived_from_3"><strong>Derived From:</strong></h4>
-
+<div class="ulist">
+<ul>
+<li>
+<p><a href="#_2_view_satellite_health_data_packet">View Satellite Health Data Packet</a></p>
+</li>
+</ul>
+</div>
 </div>
 </div>
 <div class="sect2">
-<h3 id="_user_story_2_2_listen_for_satellite_beacon">User Story 2.2: Listen for Satellite Beacon</h3>
+<h3 id="_2_2_listen_for_satellite_beacon">2.2: Listen for Satellite Beacon</h3>
 <div class="sidebarblock">
 <div class="content">
 <div class="paragraph">
@@ -656,8 +706,22 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div class="sect3">
 <h4 id="_derived_from_4"><strong>Derived From:</strong></h4>
-
+<div class="ulist">
+<ul>
+<li>
+<p><a href="#_2_view_satellite_health_data_packet">View Satellite Health Data Packet</a></p>
+</li>
+</ul>
 </div>
+</div>
+</div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="_data_structures">Data Structures</h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p>This section covers each data structure type in the <strong>SeaLion Mission Concept of Operations (ConOps)</strong>.</p>
 </div>
 </div>
 </div>
@@ -665,7 +729,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div id="footer">
 <div id="footer-text">
 Version v0.4.0<br>
-Last updated 2021-09-02 21:50:15 UTC
+Last updated 2021-09-02 21:55:04 UTC
 </div>
 </div>
 </body>
