deploy: feb15ad85073929f05360da7881dfdd945cbd014

--- a/index.html
+++ b/index.html
@@ -482,7 +482,8 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="paragraph">
 <p><span class="image"><a class="image" href="https://opensource.org/licenses/MIT"><img src="https://img.shields.io/badge/License-MIT-yellow.svg" alt="MIT License"></a></span>
 <span class="image"><a class="image" href="https://github.com/ODU-CGA-CubeSat/sealion-mission-architecture.git"><img src="https://img.shields.io/badge/Contribute%20on-GitHub-orange" alt="Contribute on GitHub"></a></span>
-<span class="image"><a class="image" href="https://ODU-CGA-CubeSat.github.io/sealion-mission-architecture/sealion-mission-architecture.pdf"><img src="https://img.shields.io/badge/Download%20-PDF-blue" alt="Download PDF"></a></span></p>
+<span class="image"><a class="image" href="https://ODU-CGA-CubeSat.github.io/sealion-mission-architecture/sealion-mission-architecture.pdf"><img src="https://img.shields.io/badge/Download%20-PDF-blue" alt="Download PDF"></a></span>
+<span class="image"><a class="image" href="https://ODU-CGA-CubeSat.github.io/sealion-mission-architecture/presentation.html"><img src="https://img.shields.io/badge/View%20-Presentation-green" alt="Download PDF"></a></span></p>
 </div>
 <div style="page-break-after: always;"></div>
 </div>
@@ -631,7 +632,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="ulist">
 <ul>
 <li>
-<p><a href="#_1_1_primary_mission_objective_a1">Primary Mission Objective A1</a></p>
+<p><a href="{doc-name}.html#_1_1_primary_mission_objective_a1">Primary Mission Objective A1</a></p>
 </li>
 </ul>
 </div>
@@ -657,13 +658,13 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="ulist">
 <ul>
 <li>
-<p><a href="#_1_2_primary_mission_objective_a2">Primary Mission Objective A2</a></p>
+<p><a href="{doc-name}.html#_1_2_primary_mission_objective_a2">Primary Mission Objective A2</a></p>
 </li>
 <li>
-<p><a href="#_1_3_primary_mission_objective_a3">Primary Mission Objective A3</a></p>
+<p><a href="{doc-name}.html#_1_3_primary_mission_objective_a3">Primary Mission Objective A3</a></p>
 </li>
 <li>
-<p><a href="#_3_3_tertiary_mission_objective_c3">Tertiary Mission Objective C3</a></p>
+<p><a href="{doc-name}.html#_3_3_tertiary_mission_objective_c3">Tertiary Mission Objective C3</a></p>
 </li>
 </ul>
 </div>
@@ -689,7 +690,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="ulist">
 <ul>
 <li>
-<p><a href="#_2_view_satellite_health_data_packet">View Satellite Health Data Packet</a></p>
+<p><a href="{doc-name}.html#_2_view_satellite_health_data_packet">View Satellite Health Data Packet</a></p>
 </li>
 </ul>
 </div>
@@ -923,7 +924,7 @@ longitude: {{longitude}}</pre>
 <div class="ulist">
 <ul>
 <li>
-<p><a href="#_2_view_satellite_health_data_packet">View Satellite Health Data Packet</a></p>
+<p><a href="{doc-name}.html#_2_view_satellite_health_data_packet">View Satellite Health Data Packet</a></p>
 </li>
 </ul>
 </div>
@@ -935,7 +936,7 @@ longitude: {{longitude}}</pre>
 <div id="footer">
 <div id="footer-text">
 Version v3.0.1<br>
-Last updated 2022-02-20 09:20:31 UTC
+Last updated 2022-02-20 09:28:05 UTC
 </div>
 </div>
 </body>
