deploy: 4941d743ede53633d1abbd76ed7d2b3a604ba169

--- a/index.html
+++ b/index.html
@@ -473,6 +473,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#_satellite_health_data_packet">Satellite Health Data Packet</a></li>
 </ul>
 </li>
+<li><a href="#_finite_state_machine">Finite State Machine</a></li>
 </ul>
 </div>
 </div>
@@ -932,11 +933,21 @@ longitude: {{longitude}}</pre>
 </div>
 </div>
 </div>
+<div class="sect1">
+<h2 id="_finite_state_machine">Finite State Machine</h2>
+<div class="sectionbody">
+<div class="imageblock">
+<div class="content">
+<img src="fsm.svg" alt="fsm" width="2170" height="1175">
+</div>
+</div>
+</div>
+</div>
 </div>
 <div id="footer">
 <div id="footer-text">
 Version v3.0.1<br>
-Last updated 2022-02-20 23:40:07 UTC
+Last updated 2022-02-20 23:56:24 UTC
 </div>
 </div>
 </body>
