--- a/index.html
+++ b/index.html
@@ -651,7 +651,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="ulist">
 <ul>
 <li>
-<p><a href="{doc-name}.html#_1_1_primary_mission_objective_a1">Primary Mission Objective A1</a></p>
+<p><a href="#_1_1_primary_mission_objective_a1">Primary Mission Objective A1</a></p>
 </li>
 </ul>
 </div>
@@ -693,7 +693,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="ulist">
 <ul>
 <li>
-<p><a href="{doc-name}.html#_2_view_satellite_health_data_packet">View Satellite Health Data Packet</a></p>
+<p><a href="#_2_view_satellite_health_data_packet">View Satellite Health Data Packet</a></p>
 </li>
 </ul>
 </div>
@@ -751,7 +751,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="ulist">
 <ul>
 <li>
-<p><a href="{doc-name}.html#_4_request_telemetry_data">Request Telemetry Data</a></p>
+<p><a href="#_4_request_telemetry_data">Request Telemetry Data</a></p>
 </li>
 </ul>
 </div>
@@ -777,7 +777,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="ulist">
 <ul>
 <li>
-<p><a href="{doc-name}.html#_4_request_telemetry_data">Request Telemetry Data</a></p>
+<p><a href="#_4_request_telemetry_data">Request Telemetry Data</a></p>
 </li>
 </ul>
 </div>
@@ -817,10 +817,10 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="ulist">
 <ul>
 <li>
-<p><a href="{doc-name}.html#_2_2_secondary_mission_objective_b2">Secondary Mission Objective B2</a></p>
+<p><a href="#_2_2_secondary_mission_objective_b2">Secondary Mission Objective B2</a></p>
 </li>
 <li>
-<p><a href="{doc-name}.html#_3_3_tertiary_mission_objective_c3">Tertiary Mission Objective C3</a></p>
+<p><a href="#_3_3_tertiary_mission_objective_c3">Tertiary Mission Objective C3</a></p>
 </li>
 </ul>
 </div>
@@ -846,7 +846,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="ulist">
 <ul>
 <li>
-<p><a href="{doc-name}.html#_1_5_primary_mission_objective_a5">Primary Mission Objective A5</a></p>
+<p><a href="#_1_5_primary_mission_objective_a5">Primary Mission Objective A5</a></p>
 </li>
 </ul>
 </div>
@@ -872,7 +872,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="ulist">
 <ul>
 <li>
-<p><a href="{doc-name}.html#_2_1_secondary_mission_objective_b1">Secondary Mission Objective B1</a></p>
+<p><a href="#_2_1_secondary_mission_objective_b1">Secondary Mission Objective B1</a></p>
 </li>
 </ul>
 </div>
@@ -898,7 +898,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="ulist">
 <ul>
 <li>
-<p><a href="{doc-name}.html#_1_3_primary_mission_objective_a3">Primary Mission Objective A3</a></p>
+<p><a href="#_1_3_primary_mission_objective_a3">Primary Mission Objective A3</a></p>
 </li>
 </ul>
 </div>
@@ -938,10 +938,10 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="ulist">
 <ul>
 <li>
-<p><a href="{doc-name}.html#_2_2_secondary_mission_objective_b2">Secondary Mission Objective B2</a></p>
+<p><a href="#_2_2_secondary_mission_objective_b2">Secondary Mission Objective B2</a></p>
 </li>
 <li>
-<p><a href="{doc-name}.html#_3_3_tertiary_mission_objective_c3">Tertiary Mission Objective C3</a></p>
+<p><a href="#_3_3_tertiary_mission_objective_c3">Tertiary Mission Objective C3</a></p>
 </li>
 </ul>
 </div>
@@ -967,7 +967,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="ulist">
 <ul>
 <li>
-<p><a href="{doc-name}.html#_1_5_primary_mission_objective_a5">Primary Mission Objective A5</a></p>
+<p><a href="#_1_5_primary_mission_objective_a5">Primary Mission Objective A5</a></p>
 </li>
 </ul>
 </div>
@@ -993,7 +993,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="ulist">
 <ul>
 <li>
-<p><a href="{doc-name}.html#_2_1_secondary_mission_objective_b1">Secondary Mission Objective B1</a></p>
+<p><a href="#_2_1_secondary_mission_objective_b1">Secondary Mission Objective B1</a></p>
 </li>
 </ul>
 </div>
@@ -1019,7 +1019,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="ulist">
 <ul>
 <li>
-<p><a href="{doc-name}.html#_1_3_primary_mission_objective_a3">Primary Mission Objective A3</a></p>
+<p><a href="#_1_3_primary_mission_objective_a3">Primary Mission Objective A3</a></p>
 </li>
 </ul>
 </div>
@@ -1109,10 +1109,10 @@ tle_data: {{tle_data}}</pre>
 <div class="ulist">
 <ul>
 <li>
-<p><a href="{doc-name}.html#_2_view_satellite_health_data_packet">View Satellite Health Data Packet</a></p>
+<p><a href="#_2_view_satellite_health_data_packet">View Satellite Health Data Packet</a></p>
 </li>
 <li>
-<p><a href="{doc-name}.html#_4_1_request_satellite_health_data">Request Satellite Health Data</a></p>
+<p><a href="#_4_1_request_satellite_health_data">Request Satellite Health Data</a></p>
 </li>
 </ul>
 </div>
@@ -1494,7 +1494,7 @@ time_stamp: {{time_stamp}}</pre>
 <div class="ulist">
 <ul>
 <li>
-<p><a href="{doc-name}.html#_4_2_request_satellite_aods_sensor_data">Request Satellite AODS Sensor Data</a></p>
+<p><a href="#_4_2_request_satellite_aods_sensor_data">Request Satellite AODS Sensor Data</a></p>
 </li>
 </ul>
 </div>
@@ -1850,7 +1850,7 @@ checksum: {{checksum}}</pre>
 <div id="footer">
 <div id="footer-text">
 Version v3.0.1<br>
-Last updated 2022-02-22 23:59:18 UTC
+Last updated 2022-02-23 00:14:58 UTC
 </div>
 </div>
 </body>
