deploy: d9b9594ea5691d0967bb4c99cfbe69f0c0bdae9a

--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="sidebarblock">
 <div class="content">
 <div class="paragraph">
-<p>The SeaLion mission shall adhere to CubeSat standards as per CDS Rev. 13</p>
+<p>The SeaLion mission shall adhere to CubeSat standards.</p>
 </div>
 </div>
 </div>
@@ -622,7 +622,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <h3 id="_stakeholder_needs_mapping">Stakeholder Needs Mapping</h3>
 <div class="imageblock">
 <div class="content">
-<img src="stakeholder-needs-mapping.svg" alt="stakeholder needs mapping" width="1187" height="1016">
+<img src="stakeholder-needs-mapping.svg" alt="stakeholder needs mapping" width="1181" height="1010">
 </div>
 </div>
 </div>
@@ -864,7 +864,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <h3 id="_user_stories_mapping">User Stories Mapping</h3>
 <div class="imageblock">
 <div class="content">
-<img src="user-stories-mapping.svg" alt="user stories mapping" width="3466" height="972">
+<img src="user-stories-mapping.svg" alt="user stories mapping" width="3460" height="966">
 </div>
 </div>
 </div>
@@ -872,7 +872,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <h3 id="_user_stories_as_use_case_diagram">User stories as Use Case Diagram</h3>
 <div class="imageblock">
 <div class="content">
-<img src="use-case-diagram.svg" alt="use case diagram" width="819" height="908">
+<img src="use-case-diagram.svg" alt="use case diagram" width="813" height="902">
 </div>
 </div>
 </div>
@@ -1624,7 +1624,7 @@ exit_tle: {{exit_tle}}</pre>
 <h3 id="_data_structures_mapping">Data Structures Mapping</h3>
 <div class="imageblock">
 <div class="content">
-<img src="data-structures-mapping.svg" alt="data structures mapping" width="1180" height="1178">
+<img src="data-structures-mapping.svg" alt="data structures mapping" width="1211" height="1350">
 </div>
 </div>
 </div>
@@ -1635,7 +1635,7 @@ exit_tle: {{exit_tle}}</pre>
 <div class="sectionbody">
 <div class="imageblock">
 <div class="content">
-<img src="fsm.svg" alt="fsm" width="2018" height="1353">
+<img src="fsm.svg" alt="fsm" width="2116" height="1366">
 </div>
 </div>
 </div>
@@ -1644,7 +1644,7 @@ exit_tle: {{exit_tle}}</pre>
 <div id="footer">
 <div id="footer-text">
 Version v5.0.0<br>
-Last updated 2022-03-01 02:43:16 UTC
+Last updated 2022-05-31 21:02:21 UTC
 </div>
 </div>
 </body>
