deploy: c42804ab9d47ebb162ba779c9576df3bf94e0fbb

--- a/abstract.html
+++ b/abstract.html
@@ -444,7 +444,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div id="preamble">
 <div class="sectionbody">
 <div class="paragraph">
-<p><span class="image"><a class="image" href="{{architecture.package.homepage}}/abstract.pdf"><img src="https://img.shields.io/badge/Download%20-PDF-blue" alt="Download PDF"></a></span></p>
+<p><span class="image"><a class="image" href="abstract.pdf"><img src="https://img.shields.io/badge/Download%20-PDF-blue" alt="Download PDF"></a></span></p>
 </div>
 </div>
 </div>
@@ -685,7 +685,7 @@ the SeaLion CubeSat flight software team downselecting the Mach30 modeling langu
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-05-31 21:01:46 UTC
+Last updated 2022-05-31 21:56:48 UTC
 </div>
 </div>
 </body>
