--- a/abstract.html
+++ b/abstract.html
@@ -452,9 +452,9 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <h2 id="_introduction">Introduction</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>Model-Based Systems Engineering is an approach to systems engineering
+<p>Model-Based Systems Engineering (MBSE) is an approach to systems engineering
 whereby models serve as the <em>authoritative source of truth</em> for conducting systems engineering activities,
-such as the design, specification, analysis, verification &amp; validation of a sytem [<a href="#architecting_spacecraft">1</a>].</p>
+such as the design, specification, analysis, verification, and validation of a system [<a href="#architecting_spacecraft">1</a>].</p>
 </div>
 <div class="paragraph">
 <p>The NASA handbook on systems engineering can be applied to CubeSat Mission design,
@@ -463,15 +463,15 @@ including flight software architecture [<a href="#asundi13_cubes">2</a>].</p>
 </div>
 <div class="paragraph">
 <p>The SeaLion Mission,
-a joint CubeSat mission between the Old Dominion University and Coast Guard Academy,
+a joint CubeSat mission between the Old Dominion University (ODU) and Coast Guard Academy (CGA),
 adopted both a model-based and docs-as-code approach to developing a flight software architecture
-as a means to minimize configuration management overhead,
-while providing full traceability of requirements and component specifications of the flight software,
+as a means to minimize configuration management overhead.
+While also providing full traceability of requirements and component specifications of the flight software,
 such as stakeholder needs, user stories, and data structures pertaining to the CubeSat mission,
-are captured are within a model that yields deduplication of content both human-readable and machine-queryable.</p>
+which are captured are within a model that yields deduplication of content both human-readable and machine-queryable.</p>
 </div>
 <div class="paragraph">
-<p>This article presents the modeling language, tools, and technical approach used to fascilitate the configuration management, design, specification, &amp; implementation of the SeaLion mission architecture for the flight software.</p>
+<p>This article presents the modeling language, tools, and technical approach used to fascilitate the configuration management, design, specification, and implementation of the SeaLion mission architecture for the flight software.</p>
 </div>
 </div>
 </div>
@@ -510,23 +510,23 @@ such that it can be unambiguiously understood enough to be implemented,
 as well as provide full traceability and rationale for architectural elements with minimal configuration management overhead.</p>
 </div>
 <div class="paragraph">
-<p>The MBSE approach was of interest to SeaLion CubeSat flight software team,
+<p>The MBSE approach was of interest to the SeaLion CubeSat flight software team,
 as to yield the benefits of reducing ambiguity that usually comes with using informal language for specifying aspects of a system,
 as well as minimizing duplication of content that tends to accumulate in a document-based systems engineering approach.</p>
 </div>
 <div class="paragraph">
 <p>Furthermore,
 it was also of interest to adopt a docs-as-code approach,
-as to yield the benefits of utilizing the same tools used to configuration manage code,
-using version control tools, s.a., Git [<a href="#docs_as_code">4</a>].
+as to yield the benefits of utilizing the same tools used to manage code,
+using version control tools (e.g., Git),
 for the configuration management of flight software architecture documentation,
-captured in a model-based approach.</p>
+captured in a model-based approach [<a href="#docs_as_code">4</a>].</p>
 </div>
 <div class="paragraph">
 <p>Selection of a modeling language,
 modeling tool,
-and technical approach need be taken into consideration,
-in order to proper adopt an MBSE approach.</p>
+and technical approach needs to be taken into consideration,
+in order to properly adopt a MBSE approach.</p>
 </div>
 <div class="paragraph">
 <p>Other considerations include overhead incurred with training the team,
@@ -538,23 +538,23 @@ as well as technical overhead with setting up and maintaining the modeling tools
 <h2 id="_modeling_language_tool_methodology">Modeling Language, Tool, &amp; Methodology</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>The Mach30 modeling language is a YAML-based modeling language for defining a software architecture.
-Since YAML is a lightweight, highly-structured, human-readable, machine queryable, &amp; line-oriented markup language,
+<p>The Mach30 modeling language (m30ml) is a YAML-based modeling language for defining a software architecture.
+Since YAML is a lightweight, highly-structured, human-readable, machine queryable, and line-oriented markup language,
 it was ideal for document generation use cases,
-as well as use with version control tools like, Git.</p>
+as well as use with version control tools like Git.</p>
 </div>
 <div class="paragraph">
-<p>Mach30&#8217;s modeling language also had minimal technical overhead, as it was compatible with modern doctools,
+<p>Mach30 also had minimal technical overhead as it was compatible with modern doc tools
 such as asciidoctor &amp; bibtex.</p>
 </div>
 <div class="paragraph">
-<p>Mach30&#8217;s modeling language also provided modeling elements familiar in agile software development,
-such as stakeholder needs, user stories, &amp; data structures,
+<p>Mach30 also provided modeling elements familiar in agile software development,
+such as stakeholder needs, user stories, and data structures,
 with relationship elements for defining traceability between modeling elements.</p>
 </div>
 <div class="paragraph">
 <p>For the aforementioned reasons,
-the SeaLion CubeSat flight software team downselected the Mach30 modeling language (m30ml) for specifying the SeaLion CubeSat flight software architecture [<a href="#mach30_git">5</a>].</p>
+the SeaLion CubeSat flight software team downselected m30ml for specifying the SeaLion CubeSat flight software architecture [<a href="#mach30_git">5</a>].</p>
 </div>
 </div>
 </div>
@@ -625,7 +625,7 @@ the SeaLion CubeSat flight software team downselected the Mach30 modeling langua
 <h2 id="_user_stories">User Stories</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>The SeaLion Mission Architecture’s stakeholder needs are then used to identify a series of user stories which then lead to design decisions captured in data structure and activity definitions.  These are created from the perspective of the ground station operator to define the tasks that need to be completed to satisfy the user stories.</p>
+<p>The SeaLion Mission Architecture’s stakeholder needs are then used to identify a series of user stories which then lead to design decisions captured in data structure and activity definitions.  These are created from the perspective of the ground station operator to define the tasks that need to be completed to satisfy the user stories.  These user stories are listed in the following Table 2.</p>
 </div>
 <table class="tableblock frame-all grid-all stretch">
 <caption class="title">Table 2. User Stories</caption>
@@ -706,7 +706,7 @@ the SeaLion CubeSat flight software team downselected the Mach30 modeling langua
 <h2 id="_example_data_structure">Example Data Structure</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>An example data structure can be derived from user stories.</p>
+<p>An example data structure can be derived from user stories as presented in Table 3.</p>
 </div>
 <table class="tableblock frame-all grid-all stretch">
 <caption class="title">Table 3. Satellite Health Data Packet Specification</caption>
@@ -750,6 +750,54 @@ the SeaLion CubeSat flight software team downselected the Mach30 modeling langua
 </tr>
 </tbody>
 </table>
+<div class="sect3">
+<h4 id="_derived_from"><strong>Derived From:</strong></h4>
+<div class="ulist">
+<ul>
+<li>
+<p><a href="sealion-mission-architecture.html#_2_view_satellite_beacon_data">View Satellite Beacon Data</a></p>
+</li>
+<li>
+<p><a href="sealion-mission-architecture.html#_4_1_request_satellite_health_data">Request Satellite Health Data</a></p>
+</li>
+</ul>
+</div>
+</div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="_conclusion_future_works">Conclusion &amp; Future Works</h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p>The methodology presented in this article is an effort to reduce the painpoints associated with traditional systems engineering for the CubeSat developers.
+The ever growing number of CubeSat projects in existence demands a lightweight model-based approach that can be adopted for implementing flight software while minimizing configuration management overhead.
+Docs-as-code can be used as an approach to flight software for tight coupling between both software and documentation
+as well as providing a highly structured template to base future developments on for the CubeSat community [<a href="#sealion_mission_architecture">6</a>].
+Future actions include validating this approach as the flight software is created based on the model-based docs-as-code approach.</p>
+</div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="_references">References</h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p><a id="architecting_spacecraft"></a>[1] S. Friedenthal and C. Oster, <em>Architecting spacecraft with SysML</em>. .</p>
+</div>
+<div class="paragraph">
+<p><a id="asundi13_cubes"></a>[2] S. A. Asundi and N. G. Fitz-Coy, “CubeSat mission design based on a systems engineering approach,” in <em>2013 IEEE Aerospace Conference</em>, Mar. 2013, p. nil, doi: 10.1109/aero.2013.6496900.</p>
+</div>
+<div class="paragraph">
+<p><a id="caesar_model_based_approach"></a>[3] “CAESAR Model-Based Approach to Harness Design,” <em>Proceedings of IEEE Aerospace Conference</em>, Mar. 2020.</p>
+</div>
+<div class="paragraph">
+<p><a id="docs_as_code"></a>[4] E. Holscher, “Docs as Code,” [Online]. Available: <a href="https://www.writethedocs.org/guide/docs-as-code/" class="bare">https://www.writethedocs.org/guide/docs-as-code/</a>.</p>
+</div>
+<div class="paragraph">
+<p><a id="mach30_git"></a>[5] J. Simmons, <em>Mach 30 Modeling Language</em>. Mach 30 Team.</p>
+</div>
+<div class="paragraph">
+<p><a id="sealion_mission_architecture"></a>[6] O. D. U. S. L. F. S. Team, <em>SeaLion Mission Architecture</em>. ODU.</p>
+</div>
 </div>
 </div>
 </div>
@@ -761,7 +809,7 @@ the SeaLion CubeSat flight software team downselected the Mach30 modeling langua
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-06-01 00:07:14 UTC
+Last updated 2022-06-01 01:59:20 UTC
 </div>
 </div>
 </body>
