--- a/abstract.html
+++ b/abstract.html
@@ -443,6 +443,9 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div id="content">
 <div id="preamble">
 <div class="sectionbody">
+<div class="paragraph text-center">
+<p>Sharan Asundi &lt;<a href="mailto:sasundi@odu.edu">sasundi@odu.edu</a>&gt;, Sean Marquez &lt;<a href="mailto:sean@space.coop">sean@space.coop</a>&gt;, Kevin Chiu &lt;<a href="mailto:kchiu002@odu.edu">kchiu002@odu.edu</a>&gt;</p>
+</div>
 <div class="paragraph">
 <p><span class="image"><a class="image" href="abstract.pdf"><img src="https://img.shields.io/badge/Download%20-PDF-blue" alt="Download PDF"></a></span></p>
 </div>
@@ -800,10 +803,10 @@ Future actions include validating this approach as the flight software is create
 <p><a id="docs_as_code"></a>[4] E. Holscher, “Docs as Code,” [Online]. Available: <a href="https://www.writethedocs.org/guide/docs-as-code/" class="bare">https://www.writethedocs.org/guide/docs-as-code/</a>.</p>
 </div>
 <div class="paragraph">
-<p><a id="mach30_git"></a>[5] J. Simmons, <em>Mach 30 Modeling Language</em>. Mach 30 Team.</p>
+<p><a id="mach30_git"></a>[5] J. Simmons, “Mach30 Modeling Language,” [Online]. Available: <a href="https://github.com/Mach30/m30ml" class="bare">https://github.com/Mach30/m30ml</a>.</p>
 </div>
 <div class="paragraph">
-<p><a id="sealion_mission_architecture"></a>[6] O. D. U. S. L. F. S. Team, <em>SeaLion Mission Architecture</em>. ODU.</p>
+<p><a id="sealion_mission_architecture"></a>[6] “SeaLion Mission Architecture,” [Online]. Available: <a href="https://github.com/ODU-CGA-CubeSat/sealion-mission-architecture" class="bare">https://github.com/ODU-CGA-CubeSat/sealion-mission-architecture</a>.</p>
 </div>
 </div>
 </div>
@@ -816,7 +819,7 @@ Future actions include validating this approach as the flight software is create
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-06-01 02:11:06 UTC
+Last updated 2022-06-01 02:54:53 UTC
 </div>
 </div>
 </body>
